# yal

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Class Diagram.xml  README.md
docs/: yal.doxy
example/: helper_functions.h  yal.cpp  yal_singleton.cpp
example/sink/: console_sink.cpp  console_sink.h  debug_sink.cpp  debug_sink.h  file_sink.cpp  file_sink.h  helper_functions.h  pair_sink.cpp  pair_sink.h
include/yal/: console_sink.h  dll_export.h  empty_sink.h  encoding.h  log_level.h  log_level.hpp  log_message.hpp  logger.hpp  manager.hpp  sink.h  sink_queue.hpp  stream.hpp  yal.hpp  yal_c_iface.h  yal_export.h  yal_logger.hpp  yal_manager.hpp  yal_singleton.hpp  yal_stream.hpp
include/yal/sinks/: console_sink.h  debug_sink.h  empty_sink.h
src/: logger.cpp  manager.cpp  sink_queue.cpp  stream.cpp  yal.cpp  yal_c_iface.cpp  yal_logger.cpp  yal_manager.cpp  yal_singleton.cpp  yal_stream.cpp
src/sinks/: console_sink.cpp  debug_sink.cpp  helper_functions.h
tests/: yal.cpp
